[gd_scene load_steps=14 format=2]

[ext_resource path="res://dgray.png" type="Texture" id=1]
[ext_resource path="res://white.png" type="Texture" id=2]
[ext_resource path="res://lgray.png" type="Texture" id=3]
[ext_resource path="res://black.png" type="Texture" id=4]
[ext_resource path="res://red.png" type="Texture" id=5]
[ext_resource path="res://Level.gd" type="Script" id=6]
[ext_resource path="res://green.png" type="Texture" id=7]
[ext_resource path="res://click0.wav" type="AudioStream" id=8]
[ext_resource path="res://click1.wav" type="AudioStream" id=9]
[ext_resource path="res://click2.wav" type="AudioStream" id=10]
[ext_resource path="res://blue.png" type="Texture" id=11]
[ext_resource path="res://orange.png" type="Texture" id=12]

[sub_resource type="TileSet" id=1]
0/name = "lgray.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "dgray.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "white.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "red.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "black.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "green.png 5"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "blue.png 6"
6/texture = ExtResource( 11 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "orange.png 7"
7/texture = ExtResource( 12 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="Layer0" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65548, 1, 0, 65549, 6, 0, 131073, 1, 0, 131074, 5, 0, 131075, 1, 0, 131076, 1, 0, 131080, 6, 0, 131084, 7, 0, 131085, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262154, 6, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 393217, 1, 0, 393218, 7, 0, 393219, 1, 0, 393220, 1, 0, 393222, 2, 0, 393223, 4, 0, 393224, 2, 0, 393228, 6, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0 )

[node name="Layer1" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1

[node name="Click0" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Click1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Click2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
